bin_PROGRAMS = tmpcache testclient tmpclient test
tmpcache_SOURCES = bstrlib/bstrlib.c bstrlib/bstrlib.h read.c write.c snapshot.c main.c cache.h cutility.c utility.c utility.h
testclient_SOURCES = bstrlib/bstrlib.c bstrlib/bstrlib.h testclient.c tmpcache.c tmpcache.h PMurHash.c PMurHash.h
tmpclient_SOURCES = bstrlib/bstrlib.c bstrlib/bstrlib.h client.c utility.c utility.h
test_SOURCES = bstrlib/bstrlib.c bstrlib/bstrlib.h utility.c test.c
