bin_PROGRAMS =  tmpcache_read tmpcache_write tmpcache_host

#testclient_SOURCES = bstrlib/bstrlib.c bstrlib/bstrlib.h testclient.c tmpcache.c tmpcache.h PMurHash.c PMurHash.h
#tmpclient_SOURCES = bstrlib/bstrlib.c bstrlib/bstrlib.h client.c utility.c utility.h
#test_SOURCES = bstrlib/bstrlib.c bstrlib/bstrlib.h utility.c test.c

tmpcache_read_SOURCES = bstrlib/bstrlib.c utility.c read.c cutility.c tmpcache_read.c
tmpcache_write_SOURCES = bstrlib/bstrlib.c utility.c write.c cutility.c tmpcache_write.c
tmpcache_host_SOURCES = bstrlib/bstrlib.c utility.c read.c write.c cutility.c tmpcache_host.c
