bin_PROGRAMS =  tmpcache_read tmpcache_write tmpcache_host tmpcache_dump tmpcache_readfrom tmpcache_writeto

#testclient_SOURCES = bstrlib/bstrlib.c bstrlib/bstrlib.h testclient.c tmpcache.c tmpcache.h PMurHash.c PMurHash.h
#tmpclient_SOURCES = bstrlib/bstrlib.c bstrlib/bstrlib.h client.c utility.c utility.h
#test_SOURCES = bstrlib/bstrlib.c bstrlib/bstrlib.h utility.c test.c

tmpcache_read_SOURCES = bstrlib/bstrlib.c utility.c read.c cutility.c tmpcache_read.c
tmpcache_write_SOURCES = bstrlib/bstrlib.c utility.c write.c cutility.c tmpcache_write.c
tmpcache_host_SOURCES = bstrlib/bstrlib.c utility.c read.c write.c cutility.c tmpcache_host.c
tmpcache_dump_SOURCES = bstrlib/bstrlib.c utility.c snapshot.c cutility.c tmpcache_dump.c
tmpcache_readfrom_SOURCES = bstrlib/bstrlib.c utility.c cutility.c tmpcache_readfrom.c
tmpcache_writeto_SOURCES = bstrlib/bstrlib.c utility.c cutility.c tmpcache_writeto.c
